// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COProviderSelector Rendering should render COProviderSelector 1`] = `
<div>
  <div
    class="breadCrumb breadcrumbs"
  >
    <div>
      <a
        class="breadcrumb"
        href="/account/testAcc/ce/orgs/undefined/projects/undefined/autostopping-rules"
      >
        ce.co.breadCrumb.rules
      </a>
      <span
        class="bp3-icon StyledProps--main separator"
        data-icon="main-chevron-right"
      >
        <svg
          height="11"
          viewBox="0 0 8 14"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
            fill="#4d5969"
          />
        </svg>
      </span>
    </div>
    <div>
      <span
        class="lastBreadcrumb"
      />
    </div>
  </div>
  <div
    style="top: 35px; box-shadow: rgb(40 41 61 / 4%) 0px 2px 8px, rgb(96 97 112 / 16%) 0px 16px 24px; width: 392px; bottom: 0px; right: 0px; position: fixed; z-index: 20; overflow-y: scroll;"
  >
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main StyledProps--padding-medium"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
          >
            Select Cloud Account
          </h2>
          <img
            alt=""
            aria-hidden="true"
            src="test-file-stub"
            style="width: 50%; align-self: center;"
          />
          <p
            class="StyledProps--font StyledProps--main"
          >
            ce.co.autoStoppingRule.providerSelector.helpText.selectProvider
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="margin: 0px auto; padding-top: 100px; padding-left: 50px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-large"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main title"
      >
        common.letsGetYouStarted
      </h1>
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main"
        level="2"
      >
        ce.co.autoStoppingRule.providerSelector.description
      </h2>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          style="padding-top: 29px;"
        >
          <div
            class="providersViewGrid"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <span
                class="Card--corner"
              >
                <span
                  class="Card--badge"
                />
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                  data-icon="main-tick"
                >
                  <svg
                    height="10"
                    viewBox="0 0 11 8"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon card"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-aws"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 10"
                      width="28"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                        fill="#252f3e"
                      />
                      <g
                        fill="#f90"
                      >
                        <path
                          d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                        />
                        <path
                          d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="1"
              tabindex="0"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon card"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-azure"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 12"
                      width="28"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="#2075b7"
                      >
                        <path
                          d="M14 11.3H3.5c2.1-.4 4.2-.7 6.3-1.1 0-.1 0-.1-.1-.1-1.1-1.4-2.2-2.7-3.2-3.9-.1-.1-.1-.2 0-.2.4-1.1.8-2.1 1.1-3.2.2-.5.4-1 .5-1.5 0 0 0-.1.1-.1C10.1 4.6 12 7.9 14 11.3zM7.7.5c-.2.4-.4.7-.5 1.1-1 2.1-1.9 4.1-2.9 6.2-.3.7-.7 1.4-1 2.2 0 .1-.1.1-.2.1H.2c-.2 0-.2 0-.1-.1 1.1-2 2.3-3.9 3.4-5.9 0-.1.1-.2.2-.3C5 2.8 6.3 1.7 7.6.6c0 0 0-.1.1-.1z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main instanceTypeNameGrid"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center"
            style="font-size: 11px;"
          >
            AWS
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center"
            style="font-size: 11px;"
          >
            Azure
          </p>
        </div>
      </div>
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
            >
              ce.co.gatewayBasics.connect AWS rbac.account
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                data-testid="cr-field-cloudAccount"
                style="width: 400px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                  >
                    <p
                      class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                    />
                    <div
                      class="rightStatus"
                    >
                      <span
                        class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                        data-testid="crf-status"
                        icon="full-circle"
                      >
                        <svg
                          data-icon="full-circle"
                          height="6"
                          viewBox="0 0 16 16"
                          width="6"
                        >
                          <desc>
                            full-circle
                          </desc>
                          <path
                            d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="Tag--main"
                      >
                        <span
                          class="bp3-tag bp3-minimal tag"
                        >
                          <span
                            class="bp3-text-overflow-ellipsis bp3-fill"
                          >
                            project
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <span
          style="font-size: 13px; color: rgb(2, 120, 213); line-height: 20px; cursor: pointer;"
        >
          + ce.co.gatewayBasics.new AWS rbac.account
        </span>
      </div>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main footer StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-right"
      >
        <svg
          data-icon="chevron-right"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-right
          </desc>
          <path
            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        Next
      </span>
    </button>
  </div>
</div>
`;

exports[`COProviderSelector passing a provider property shows the gateway basics 1`] = `
<div>
  <div
    class="breadCrumb breadcrumbs"
  >
    <div>
      <a
        class="breadcrumb"
        href="/account/testAcc/ce/orgs/undefined/projects/undefined/autostopping-rules"
      >
        ce.co.breadCrumb.rules
      </a>
      <span
        class="bp3-icon StyledProps--main separator"
        data-icon="main-chevron-right"
      >
        <svg
          height="11"
          viewBox="0 0 8 14"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
            fill="#4d5969"
          />
        </svg>
      </span>
    </div>
    <div>
      <span
        class="lastBreadcrumb"
      />
    </div>
  </div>
  <div
    style="top: 35px; box-shadow: rgb(40 41 61 / 4%) 0px 2px 8px, rgb(96 97 112 / 16%) 0px 16px 24px; width: 392px; bottom: 0px; right: 0px; position: fixed; z-index: 20; overflow-y: scroll;"
  >
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main StyledProps--padding-medium"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
          >
            Select Cloud Account
          </h2>
          <img
            alt=""
            aria-hidden="true"
            src="test-file-stub"
            style="width: 50%; align-self: center;"
          />
          <p
            class="StyledProps--font StyledProps--main"
          >
            ce.co.autoStoppingRule.providerSelector.helpText.selectProvider
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="margin: 0px auto; padding-top: 100px; padding-left: 50px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-large"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main title"
      >
        common.letsGetYouStarted
      </h1>
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main"
        level="2"
      >
        ce.co.autoStoppingRule.providerSelector.description
      </h2>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          style="padding-top: 29px;"
        >
          <div
            class="providersViewGrid"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <span
                class="Card--corner"
              >
                <span
                  class="Card--badge"
                />
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                  data-icon="main-tick"
                >
                  <svg
                    height="10"
                    viewBox="0 0 11 8"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon card"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-aws"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 10"
                      width="28"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                        fill="#252f3e"
                      />
                      <g
                        fill="#f90"
                      >
                        <path
                          d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                        />
                        <path
                          d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="1"
              tabindex="0"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon card"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-azure"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 12"
                      width="28"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="#2075b7"
                      >
                        <path
                          d="M14 11.3H3.5c2.1-.4 4.2-.7 6.3-1.1 0-.1 0-.1-.1-.1-1.1-1.4-2.2-2.7-3.2-3.9-.1-.1-.1-.2 0-.2.4-1.1.8-2.1 1.1-3.2.2-.5.4-1 .5-1.5 0 0 0-.1.1-.1C10.1 4.6 12 7.9 14 11.3zM7.7.5c-.2.4-.4.7-.5 1.1-1 2.1-1.9 4.1-2.9 6.2-.3.7-.7 1.4-1 2.2 0 .1-.1.1-.2.1H.2c-.2 0-.2 0-.1-.1 1.1-2 2.3-3.9 3.4-5.9 0-.1.1-.2.2-.3C5 2.8 6.3 1.7 7.6.6c0 0 0-.1.1-.1z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main instanceTypeNameGrid"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center"
            style="font-size: 11px;"
          >
            AWS
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center"
            style="font-size: 11px;"
          >
            Azure
          </p>
        </div>
      </div>
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
            >
              ce.co.gatewayBasics.connect AWS rbac.account
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                data-testid="cr-field-cloudAccount"
                style="width: 400px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="placeholder"
                  >
                    ce.co.gatewayBasics.select
                  </span>
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <span
          style="font-size: 13px; color: rgb(2, 120, 213); line-height: 20px; cursor: pointer;"
        >
          + ce.co.gatewayBasics.new AWS rbac.account
        </span>
      </div>
    </div>
    <button
      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main footer StyledProps--intent-primary Button--with-current-color"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-right"
      >
        <svg
          data-icon="chevron-right"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-right
          </desc>
          <path
            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        Next
      </span>
    </button>
  </div>
</div>
`;

exports[`COProviderSelector selecting AWS provider shows option to select connector 1`] = `
<div>
  <div
    class="breadCrumb breadcrumbs"
  >
    <div>
      <a
        class="breadcrumb"
        href="/account/testAcc/ce/orgs/undefined/projects/undefined/autostopping-rules"
      >
        ce.co.breadCrumb.rules
      </a>
      <span
        class="bp3-icon StyledProps--main separator"
        data-icon="main-chevron-right"
      >
        <svg
          height="11"
          viewBox="0 0 8 14"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
            fill="#4d5969"
          />
        </svg>
      </span>
    </div>
    <div>
      <span
        class="lastBreadcrumb"
      />
    </div>
  </div>
  <div
    style="top: 35px; box-shadow: rgb(40 41 61 / 4%) 0px 2px 8px, rgb(96 97 112 / 16%) 0px 16px 24px; width: 392px; bottom: 0px; right: 0px; position: fixed; z-index: 20; overflow-y: scroll;"
  >
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main StyledProps--padding-medium"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
          >
            Select Cloud Account
          </h2>
          <img
            alt=""
            aria-hidden="true"
            src="test-file-stub"
            style="width: 50%; align-self: center;"
          />
          <p
            class="StyledProps--font StyledProps--main"
          >
            ce.co.autoStoppingRule.providerSelector.helpText.selectProvider
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="margin: 0px auto; padding-top: 100px; padding-left: 50px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-large"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main title"
      >
        common.letsGetYouStarted
      </h1>
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main"
        level="2"
      >
        ce.co.autoStoppingRule.providerSelector.description
      </h2>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          style="padding-top: 29px;"
        >
          <div
            class="providersViewGrid"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <span
                class="Card--corner"
              >
                <span
                  class="Card--badge"
                />
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                  data-icon="main-tick"
                >
                  <svg
                    height="10"
                    viewBox="0 0 11 8"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon card"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-aws"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 10"
                      width="28"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                        fill="#252f3e"
                      />
                      <g
                        fill="#f90"
                      >
                        <path
                          d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                        />
                        <path
                          d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="1"
              tabindex="0"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon card"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-azure"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 12"
                      width="28"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="#2075b7"
                      >
                        <path
                          d="M14 11.3H3.5c2.1-.4 4.2-.7 6.3-1.1 0-.1 0-.1-.1-.1-1.1-1.4-2.2-2.7-3.2-3.9-.1-.1-.1-.2 0-.2.4-1.1.8-2.1 1.1-3.2.2-.5.4-1 .5-1.5 0 0 0-.1.1-.1C10.1 4.6 12 7.9 14 11.3zM7.7.5c-.2.4-.4.7-.5 1.1-1 2.1-1.9 4.1-2.9 6.2-.3.7-.7 1.4-1 2.2 0 .1-.1.1-.2.1H.2c-.2 0-.2 0-.1-.1 1.1-2 2.3-3.9 3.4-5.9 0-.1.1-.2.2-.3C5 2.8 6.3 1.7 7.6.6c0 0 0-.1.1-.1z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main instanceTypeNameGrid"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center"
            style="font-size: 11px;"
          >
            AWS
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center"
            style="font-size: 11px;"
          >
            Azure
          </p>
        </div>
      </div>
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
            >
              ce.co.gatewayBasics.connect AWS rbac.account
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                data-testid="cr-field-cloudAccount"
                style="width: 400px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="placeholder"
                  >
                    ce.co.gatewayBasics.select
                  </span>
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <span
          style="font-size: 13px; color: rgb(2, 120, 213); line-height: 20px; cursor: pointer;"
        >
          + ce.co.gatewayBasics.new AWS rbac.account
        </span>
      </div>
    </div>
    <button
      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main footer StyledProps--intent-primary Button--with-current-color"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-right"
      >
        <svg
          data-icon="chevron-right"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-right
          </desc>
          <path
            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        Next
      </span>
    </button>
  </div>
</div>
`;

exports[`COProviderSelector selecting Azure provider shows option to select connector 1`] = `
<div>
  <div
    class="breadCrumb breadcrumbs"
  >
    <div>
      <a
        class="breadcrumb"
        href="/account/testAcc/ce/orgs/undefined/projects/undefined/autostopping-rules"
      >
        ce.co.breadCrumb.rules
      </a>
      <span
        class="bp3-icon StyledProps--main separator"
        data-icon="main-chevron-right"
      >
        <svg
          height="11"
          viewBox="0 0 8 14"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
            fill="#4d5969"
          />
        </svg>
      </span>
    </div>
    <div>
      <span
        class="lastBreadcrumb"
      />
    </div>
  </div>
  <div
    style="top: 35px; box-shadow: rgb(40 41 61 / 4%) 0px 2px 8px, rgb(96 97 112 / 16%) 0px 16px 24px; width: 392px; bottom: 0px; right: 0px; position: fixed; z-index: 20; overflow-y: scroll;"
  >
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-large"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main StyledProps--padding-medium"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
          >
            Select Cloud Account
          </h2>
          <img
            alt=""
            aria-hidden="true"
            src="test-file-stub"
            style="width: 50%; align-self: center;"
          />
          <p
            class="StyledProps--font StyledProps--main"
          >
            ce.co.autoStoppingRule.providerSelector.helpText.selectProvider
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="margin: 0px auto; padding-top: 100px; padding-left: 50px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-large"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main title"
      >
        common.letsGetYouStarted
      </h1>
      <h2
        class="StyledProps--font StyledProps--font-h2 StyledProps--main"
        level="2"
      >
        ce.co.autoStoppingRule.providerSelector.description
      </h2>
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
          style="padding-top: 29px;"
        >
          <div
            class="providersViewGrid"
          >
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
              data-index="0"
              tabindex="0"
            >
              <span
                class="Card--corner"
              >
                <span
                  class="Card--badge"
                />
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                  data-icon="main-tick"
                >
                  <svg
                    height="10"
                    viewBox="0 0 11 8"
                    width="10"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon card"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-aws"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 10"
                      width="28"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                        fill="#252f3e"
                      />
                      <g
                        fill="#f90"
                      >
                        <path
                          d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                        />
                        <path
                          d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
              data-index="1"
              tabindex="0"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
              >
                <div
                  class="Card--cardIcon card"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="service-azure"
                  >
                    <svg
                      height="28"
                      viewBox="0 0 14 12"
                      width="28"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g
                        fill="#2075b7"
                      >
                        <path
                          d="M14 11.3H3.5c2.1-.4 4.2-.7 6.3-1.1 0-.1 0-.1-.1-.1-1.1-1.4-2.2-2.7-3.2-3.9-.1-.1-.1-.2 0-.2.4-1.1.8-2.1 1.1-3.2.2-.5.4-1 .5-1.5 0 0 0-.1.1-.1C10.1 4.6 12 7.9 14 11.3zM7.7.5c-.2.4-.4.7-.5 1.1-1 2.1-1.9 4.1-2.9 6.2-.3.7-.7 1.4-1 2.2 0 .1-.1.1-.2.1H.2c-.2 0-.2 0-.1-.1 1.1-2 2.3-3.9 3.4-5.9 0-.1.1-.2.2-.3C5 2.8 6.3 1.7 7.6.6c0 0 0-.1.1-.1z"
                        />
                      </g>
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main instanceTypeNameGrid"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center"
            style="font-size: 11px;"
          >
            AWS
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-align-center"
            style="font-size: 11px;"
          >
            Azure
          </p>
        </div>
      </div>
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        >
          <div
            class="bp3-form-group"
          >
            <label
              class="bp3-label"
            >
              ce.co.gatewayBasics.connect Azure rbac.account
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                data-testid="cr-field-cloudAccount"
                style="width: 400px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="placeholder"
                  >
                    ce.co.gatewayBasics.select
                  </span>
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <span
          style="font-size: 13px; color: rgb(2, 120, 213); line-height: 20px; cursor: pointer;"
        >
          + ce.co.gatewayBasics.new Azure rbac.account
        </span>
      </div>
    </div>
    <button
      class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main footer StyledProps--intent-primary Button--with-current-color"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-chevron-right StyledProps--main StyledProps--padding-right-xsmall"
        icon="chevron-right"
      >
        <svg
          data-icon="chevron-right"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-right
          </desc>
          <path
            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        Next
      </span>
    </button>
  </div>
</div>
`;
